crates/parser/tests/parse/memory-malformed.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..157
  MODULE@0..156
    L_PAREN@0..1 "("
    KEYWORD@1..7 "module"
    WHITESPACE@7..10 "\n  "
    MODULE_FIELD_MEMORY@10..18
      L_PAREN@10..11 "("
      KEYWORD@11..17 "memory"
      R_PAREN@17..18 ")"
    WHITESPACE@18..21 "\n  "
    MODULE_FIELD_MEMORY@21..32
      L_PAREN@21..22 "("
      KEYWORD@22..28 "memory"
      WHITESPACE@28..29 " "
      ERROR@29..31 "\"\""
      R_PAREN@31..32 ")"
    WHITESPACE@32..35 "\n  "
    MODULE_FIELD_MEMORY@35..46
      L_PAREN@35..36 "("
      KEYWORD@36..42 "memory"
      WHITESPACE@42..43 " "
      ERROR@43..44 "("
      ERROR@44..45 ")"
      R_PAREN@45..46 ")"
    WHITESPACE@46..49 "\n  "
    MODULE_FIELD_MEMORY@49..63
      L_PAREN@49..50 "("
      KEYWORD@50..56 "memory"
      WHITESPACE@56..57 " "
      MEMORY_TYPE@57..62
        ADDR_TYPE@57..60
          ERROR@57..60 "f32"
        WHITESPACE@60..61 " "
        LIMITS@61..62
          UNSIGNED_INT@61..62 "0"
      R_PAREN@62..63 ")"
    WHITESPACE@63..66 "\n  "
    MODULE_FIELD_MEMORY@66..78
      L_PAREN@66..67 "("
      KEYWORD@67..73 "memory"
      WHITESPACE@73..74 " "
      ERROR@74..77 "i32"
      R_PAREN@77..78 ")"
    WHITESPACE@78..81 "\n  "
    MODULE_FIELD_MEMORY@81..103
      L_PAREN@81..82 "("
      KEYWORD@82..88 "memory"
      WHITESPACE@88..89 " "
      MEMORY_TYPE@89..90
        LIMITS@89..90
          UNSIGNED_INT@89..90 "0"
      WHITESPACE@90..91 " "
      ERROR@91..92 "("
      ERROR@92..99 "pagesiz"
      WHITESPACE@99..100 " "
      ERROR@100..101 "1"
      ERROR@101..102 ")"
      R_PAREN@102..103 ")"
    WHITESPACE@103..106 "\n  "
    MODULE_FIELD_MEMORY@106..127
      L_PAREN@106..107 "("
      KEYWORD@107..113 "memory"
      WHITESPACE@113..114 " "
      MEMORY_TYPE@114..126
        LIMITS@114..115
          UNSIGNED_INT@114..115 "0"
        WHITESPACE@115..116 " "
        MEM_PAGE_SIZE@116..126
          L_PAREN@116..117 "("
          KEYWORD@117..125 "pagesize"
          R_PAREN@125..126 ")"
      R_PAREN@126..127 ")"
    WHITESPACE@127..130 "\n  "
    MODULE_FIELD_MEMORY@130..154
      L_PAREN@130..131 "("
      KEYWORD@131..137 "memory"
      WHITESPACE@137..138 " "
      MEMORY_TYPE@138..153
        LIMITS@138..139
          UNSIGNED_INT@138..139 "0"
        WHITESPACE@139..140 " "
        MEM_PAGE_SIZE@140..153
          L_PAREN@140..141 "("
          KEYWORD@141..149 "pagesize"
          WHITESPACE@149..150 " "
          ERROR@150..152 "$1"
          R_PAREN@152..153 ")"
      R_PAREN@153..154 ")"
    WHITESPACE@154..155 "\n"
    R_PAREN@155..156 ")"
  WHITESPACE@156..157 "\n"

error: expected memory type
  ┌─ memory-malformed.wat:2:10
  │
2 │   (memory)
  │          ^

error: expected unsigned integer
  ┌─ memory-malformed.wat:3:11
  │
3 │   (memory "")
  │           ^^

error: unexpected token
  ┌─ memory-malformed.wat:4:12
  │
4 │   (memory ())
  │            ^

error: invalid address type
  ┌─ memory-malformed.wat:5:11
  │
5 │   (memory f32 0)
  │           ^^^

error: unexpected token
  ┌─ memory-malformed.wat:6:11
  │
6 │   (memory i32)
  │           ^^^

error: unexpected token
  ┌─ memory-malformed.wat:7:14
  │
7 │   (memory 0 (pagesiz 1))
  │              ^^^^^^^

error: unexpected token
  ┌─ memory-malformed.wat:7:22
  │
7 │   (memory 0 (pagesiz 1))
  │                      ^

error: unexpected token
  ┌─ memory-malformed.wat:7:23
  │
7 │   (memory 0 (pagesiz 1))
  │                       ^

error: expected unsigned integer
  ┌─ memory-malformed.wat:8:22
  │
8 │   (memory 0 (pagesize))
  │                      ^

error: expected unsigned integer
  ┌─ memory-malformed.wat:9:23
  │
9 │   (memory 0 (pagesize $1))
  │                       ^^

error: expected unsigned integer
  ┌─ memory-malformed.wat:9:25
  │
9 │   (memory 0 (pagesize $1))
  │                         ^
